--- a/templates/multi_input_ingredient_widget.html
+++ b/templates/multi_input_ingredient_widget.html
@@ -1,8 +1,16 @@
+{%load static%}
 <div>
     {% include "django/forms/widgets/input.html" with widget=widget  %}
     <button type="button" id="add_ingredients">Add Ingredient</button>
     <div id="ingredients_list">
+        {%for value in widget.extra_values%}
+            <div class="add-ingredient" id="ingredient_{{ forloop.counter0 }}"> 
+                <input type="text" name="ingredients" value="{{value}}"> 
+                <button type="button" onclick="deleteIngredient(this)" class="delete_ingredient" data-ingredient-id="ingredient_{{ forloop.counter0 }}">Delete</button>
+            </div>
+        {%endfor%}
        
     </div>
 
 </div>
+<script src="{% static 'js/widget.js' %}"></script>
