--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
             <div class="col title">
                 <h1 class="welcome-title">Welcome to the Foody Family</h1>
                 <hr>
-                <p class="welcome-msg">We hope you find the perfect recipe here!</p>
+                <p class="welcome-msg">Scroll down to find the perfect recipe!</p>
             </div>
         </div>
     </div>
