fix messages and add error message to add recipe page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -609,6 +609,10 @@ a:link {
         margin: 0 auto;
     }
 
+    .app-messages {
+        margin-top: 5px;
+    }
+
     .title {
         padding: 0;
     }
