--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,20 @@
     </div>
 </heading>
 
+<!-- Below from Code Institutes CodeStar project -->
+<div class="container app-messages">
+    <div class="row">
+        <div class="col-md-8 offset-md-2">
+            {% for message in messages %}
+            <div class="alert {{ message.tags }} alert-dismissible fade show" id="msg" role="alert">
+                {{ message | safe }}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+</div>
+
 <!-- Recipe card, code taken from Bootstrap -->
 <div class="container-fluid">
     <div class="row">
@@ -58,7 +72,8 @@
         <nav aria-label="Page navigation">
             <ul class="pagination justify-content-center">
                 {% if page_obj.has_previous %}
-                <li><a href="?page={{ page_obj.previous_page_number }}" class="btn btn-dark all-btn">&laquo; Prev </a></li>
+                <li><a href="?page={{ page_obj.previous_page_number }}" class="btn btn-dark all-btn">&laquo; Prev </a>
+                </li>
                 {% endif %}
                 {% if page_obj.has_next %}
                 <li><a href="?page={{ page_obj.next_page_number }}" class="btn btn-dark all-btn"> Next &raquo;</a></li>
