--- a/templates/my_drafts.html
+++ b/templates/my_drafts.html
@@ -4,6 +4,20 @@
 
 <h1>My Recipes Pending Approval</h1>
 
+<!-- Below from Code Institutes CodeStar project -->
+<div class="container app-messages">
+    <div class="row">
+        <div class="col-md-8 offset-md-2">
+            {% for message in messages %}
+            <div class="alert {{ message.tags }} alert-dismissible fade show" id="msg" role="alert">
+                {{ message | safe }}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+</div>
+
 <!--Recipe cards for users own recipes pending approval -->
 <div class="container-fluid">
     <div class="row">
