--- a/templates/update_recipe.html
+++ b/templates/update_recipe.html
@@ -6,6 +6,19 @@
 
 <h1>Edit {{ recipe.title }} Recipe</h1>
 
+<div class="container app-messages">
+  <div class="row">
+      <div class="col-md-8 offset-md-2">
+          {% for message in messages %}
+          <div class="alert {{ message.tags }} alert-dismissible fade show" id="msg" role="alert">
+              {{ message | safe }}
+              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
+          {% endfor %}
+      </div>
+  </div>
+</div>
+
 <form method="post">{% csrf_token %}
 
   {{ form | crispy }}
