--- a/templates/multi_input_widget.html
+++ b/templates/multi_input_widget.html
@@ -5,7 +5,7 @@
         {%for value in widget.extra_values%}
         <div class="add-instruction" id="instruction_{{ forloop.counter0 }}">
             <textarea type="text" name="instructions" value="{{value}}" class="instructions"cols="30" rows="3"></textarea>
-            <button type="button" onclick="deleteInstruction(this)" class="delete_instruction btn btn-danger"
+            <button type="button" onclick="deleteInstruction(this)" class="delete_instruction"
                 data-instruction-id="instruction_{{ forloop.counter0 }}">Delete</button>
         </div>
         {%endfor%}
