--- a/static/css/style.css
+++ b/static/css/style.css
@@ -195,6 +195,10 @@ a:link {
     background-color: ghostwhite;
 }
 
+#delete-msg {
+    color: #ce1313;    
+}
+
 /* Recipe detail styling */
 .recipe-heading {
     height: 301px;
