--- a/templates/delete_recipe.html
+++ b/templates/delete_recipe.html
@@ -8,7 +8,7 @@
     <form method="post">
         {% csrf_token %}
         <p>Are you sure you want to delete this recipe?</p>
-        <p>Deletion is permanent.</p>
+        <p id="delete-msg">Deletion is permanent.</p>
         <input type="submit" value="Delete Recipe" class="btn btn-danger">
         <a href="{% url 'home' %}" class="btn btn-dark dlt-btn">Cancel</a>
     </form>
