--- a/templates/my_recipes.html
+++ b/templates/my_recipes.html
@@ -5,6 +5,7 @@
 <h1>My Posted Recipes</h1>
 
 <!-- Below from Code Institutes CodeStar project -->
+{% if messages %}
 <div class="container app-messages">
     <div class="row">
         <div class="col-md-8 offset-md-2">
@@ -17,6 +18,7 @@
         </div>
     </div>
 </div>
+{% endif %}
 
 <div class="container-fluid">
     <div class="row align-items-start">
