make all fields required

--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -17,11 +17,11 @@
 
         <div class="form-input-fields">
             <label for="email">Email</label><br>
-            <input type="email" name="email" class="registration-input">
+            <input type="email" name="email" class="registration-input" required>
         </div>
         <div class="form-input-fields">
             <label for="username">Username</label><br>
-            <input type="username" name="username" class="registration-input">
+            <input type="username" name="username" class="registration-input" required>
         </div>
         <div class="form-input-fields">
             <label for="password1">Password</label><br>
@@ -29,7 +29,7 @@
         </div>
         <div class="form-input-fields">
             <label for="password2">Repeat Password</label><br>
-            <input type="password" name="password2" class="registration-input">
+            <input type="password" name="password2" class="registration-input" required>
         </div>
         <div class="form-input-fields">
             <button type="submit" class="btn btn-dark all-btn">Register</button>
