--- a/templates/my_drafts.html
+++ b/templates/my_drafts.html
@@ -36,18 +36,16 @@
                         <img src="{{ recipes.featured_image.url }}" alt="recipe image">
                         {% endif %}
                         <div class="card-body">
-                            <a href="{ %url 'draft_recipe_detail' recipes.slug %}">
-                                <h5 class="card-title draft-rec-card-title">{{ recipes.title }}</h5>
-                            </a>
-                                <hr>
+                            <h5 class="card-title draft-rec-card-title">{{ recipes.title }}</h5>
+                            <hr>
                             <div class="card-text">
                                 <span class="edit-btn">
                                     <a href="{% url 'update_draft' recipes.pk %}" class="btn btn-dark edit"><i
-                                        class="fas fa-pencil-alt edit-icon"></i>Edit</a>
+                                            class="fas fa-pencil-alt edit-icon"></i>Edit</a>
                                 </span>
                                 <span class="del-btn">
                                     <a href="{% url 'delete_draft' recipes.pk %}" class="btn btn-danger" class="del"><i
-                                        class="far fa-trash-alt del-icon"></i>Delete</a>
+                                            class="far fa-trash-alt del-icon"></i>Delete</a>
                                 </span>
                             </div>
                         </div>
@@ -65,10 +63,12 @@
         <nav aria-label="Page navigation">
             <ul class="pagination justify-content-center">
                 {% if page_obj.has_previous %}
-                <li><a href="?page={{ page_obj.previous_page_number }}" class="btn btn-dark all-btn">&laquo; Prev </a></li>
+                <li><a href="?page={{ page_obj.previous_page_number }}" class="btn btn-dark all-btn page">&laquo; Prev
+                    </a></li>
                 {% endif %}
                 {% if page_obj.has_next %}
-                <li><a href="?page={{ page_obj.next_page_number }}" class="btn btn-dark all-btn"> Next &raquo;</a></li>
+                <li><a href="?page={{ page_obj.next_page_number }}" class="btn btn-dark all-btn page"> Next &raquo;</a>
+                </li>
                 {% endif %}
             </ul>
         </nav>
