--- a/templates/my_recipes.html
+++ b/templates/my_recipes.html
@@ -28,12 +28,14 @@
                 {% if user.id == recipes.author.id %}
                 <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                     <div class="card card-position" style="width: 18rem;">
-                        {% if "placeholder" in recipes.featured_image.url %}
-                        <img src="https://res.cloudinary.com/sjb21/image/upload/v1642006351/static/placeholder_nrind0.jpg"
-                            class="card-img-top recipe-card-img" alt="placeholder image">
-                        {% else %}
-                        <img src="{{ recipes.featured_image.url }}" alt="recipe image">
-                        {% endif %}
+                        <a href="{% url 'recipe_detail' recipes.slug %}">
+                            {% if "placeholder" in recipes.featured_image.url %}
+                            <img src="https://res.cloudinary.com/sjb21/image/upload/v1642006351/static/placeholder_nrind0.jpg"
+                                class="card-img-top recipe-card-img" alt="placeholder image">
+                            {% else %}
+                            <img src="{{ recipes.featured_image.url }}" alt="recipe image" class="card-img-top recipe-card-img">
+                            {% endif %}
+                        </a>
                         <div class="card-body">
                             <a href="{% url 'recipe_detail' recipes.slug %}">
                                 <h5 class="card-title rec-card-title">{{ recipes.title }}</h5>
@@ -64,11 +66,12 @@
         <nav aria-label="Page navigation">
             <ul class="pagination justify-content-center">
                 {% if page_obj.has_previous %}
-                <li><a href="?page={{ page_obj.previous_page_number }}" class="paginate btn btn-dark all-btn">&laquo;
+                <li><a href="?page={{ page_obj.previous_page_number }}"
+                        class="paginate btn btn-dark all-btn page">&laquo;
                         Prev </a></li>
                 {% endif %}
                 {% if page_obj.has_next %}
-                <li><a href="?page={{ page_obj.next_page_number }}" class="paginate btn btn-dark all-btn"> Next
+                <li><a href="?page={{ page_obj.next_page_number }}" class="paginate btn btn-dark all-btn page"> Next
                         &raquo;</a></li>
                 {% endif %}
             </ul>
