--- a/templates/update_recipe.html
+++ b/templates/update_recipe.html
@@ -21,7 +21,7 @@
 
 {% load cloudinary %}
 
-<form method="post" action="" enctype="multipart/form-data">
+<form method="post" action="" enctype="multipart/form-data" class="update">
   
   {% csrf_token %}
 
