--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
     <div class="row">
         <div class="col-12 mt-4 ">
             <div class="row">
-                <h1>Recipes</h1>
+                <h1 class="rec-title">Recipes</h1>
                 {% for recipes in recipe_list %}
                 <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                     <div class="card card-position" style="width: 18rem;">
