--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
                 <h1 class="rec-title">Recipes</h1>
                 {% for recipes in recipe_list %}
                 <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
-                    <div class="card card-position" style="width: 18rem;">
+                    <div class="card card-position">
                         <a href="{% url 'recipe_detail' recipes.slug %}">
                             {% if "placeholder" in recipes.featured_image.url %}
                             <img src="https://res.cloudinary.com/sjb21/image/upload/v1642006351/static/placeholder_nrind0.jpg"
